--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appnope==0.1.3; platform_system == "Darwin" and python_version >= "3.8" and sys_platform == "darwin"
-asttokens==2.0.8; python_version >= "3.8"
+asttokens==2.1.0; python_version >= "3.8"
 backcall==0.2.0; python_version >= "3.8"
 captum==0.5.0; python_version >= "3.6"
 certifi==2022.9.24; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
@@ -12,14 +12,14 @@ cycler==0.11.0; python_version >= "3.8"
 debugpy==1.6.3; python_version >= "3.7"
 decorator==5.1.1; python_version >= "3.8"
 entrypoints==0.4; python_version >= "3.7"
-executing==1.1.1; python_version >= "3.8"
+executing==1.2.0; python_version >= "3.8"
 filelock==3.8.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 fonttools==4.38.0; python_version >= "3.8"
 huggingface-hub==0.10.1; python_full_version >= "3.7.0"
 idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 importlib-metadata==5.0.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 ipykernel==6.16.2; python_version >= "3.7"
-ipython==8.5.0; python_version >= "3.8"
+ipython==8.6.0; python_version >= "3.8"
 ipywidgets==8.0.2; python_version >= "3.7"
 jedi==0.18.1; python_version >= "3.8"
 joblib==1.2.0; python_version >= "3.7"
@@ -32,12 +32,16 @@ matplotlib-inline==0.1.6; python_version >= "3.8"
 matplotlib==3.6.1; python_version >= "3.8"
 nest-asyncio==1.5.6; python_version >= "3.7"
 numpy==1.23.4; python_version >= "3.8"
+nvidia-cublas-cu11==11.10.3.66; python_full_version >= "3.7.0" and python_version >= "3.6"
+nvidia-cuda-nvrtc-cu11==11.7.99; python_full_version >= "3.7.0" and python_version >= "3.6"
+nvidia-cuda-runtime-cu11==11.7.99; python_full_version >= "3.7.0" and python_version >= "3.6"
+nvidia-cudnn-cu11==8.5.0.96; python_full_version >= "3.7.0" and python_version >= "3.6"
 packaging==21.3; python_version >= "3.8" and python_full_version >= "3.7.0"
 parso==0.8.3; python_version >= "3.8"
 pastel==0.2.1; python_full_version >= "3.6.2"
 pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
 pickleshare==0.7.5; python_version >= "3.8"
-pillow==9.2.0; python_version >= "3.8"
+pillow==9.3.0; python_version >= "3.8"
 poethepoet==0.13.1; python_full_version >= "3.6.2"
 prompt-toolkit==3.0.31; python_full_version >= "3.6.2" and python_version >= "3.8"
 protobuf==3.20.2; python_version >= "3.7"
@@ -59,10 +63,10 @@ scipy==1.9.3; python_version >= "3.8"
 sentencepiece==0.1.97; python_full_version >= "3.7.0"
 setuptools-scm==7.0.5; python_version >= "3.8"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-stack-data==0.5.1; python_version >= "3.8"
+stack-data==0.6.0; python_version >= "3.8"
 tokenizers==0.13.1; python_full_version >= "3.7.0"
 tomli==2.0.1; python_version >= "3.8" and python_full_version >= "3.6.2"
-torch==1.12.1; python_full_version >= "3.7.0"
+torch==1.13.0; python_full_version >= "3.7.0"
 torchtyping==0.1.4; python_full_version >= "3.7.0"
 tornado==6.2; python_version >= "3.7"
 tqdm==4.64.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
