--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
 [build-system]
-requires = ["poetry_core>=1.0.0"]
+requires = ["poetry_core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
@@ -36,6 +36,7 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
 ]
 
 [tool.poetry.scripts]
@@ -43,19 +44,20 @@ classifiers = [  #! Update me
 "inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = ">=3.8,<3.12"
 
 rich = "^10.13.0"
-transformers =  { version = "^4.20.1", extras = ["sentencepiece", "tokenizers", "torch", "torchhub"] }
+transformers =  { version = "^4.20.1", extras = ["sentencepiece", "tokenizers", "torch"] }
 protobuf = "^3.20.2"
 captum = "^0.5.0"
 numpy = "^1.22.4"
 torchtyping = "^0.1.4"
 json-tricks = "^3.15.5"
-torch = "^1.12.0"
+torch = "^1.13.0"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
+ipykernel = "^6.15.0"
 ipywidgets = "^8.0.0rc2"
 poethepoet = "^0.13.1"
 joblib = "^1.2.0"
@@ -63,22 +65,11 @@ joblib = "^1.2.0"
 scikit-learn = { version = "^1.1.1", optional = true }
 datasets = { version = "^2.3.2", optional = true, extras = ["torch"] }
 
-[tool.poetry.dev-dependencies]
-bandit = "^1.7.4"
-black = "^22.6.0"
-darglint = "^1.8.1"
-flake8 = "^4.0.1"
-ipykernel = "^6.15.0"
-isort = {extras = ["colors"], version = "^5.10.1"}
-mypy = "^0.910"
-mypy-extensions = "^0.4.3"
-pre-commit = "^2.19.0"
-pydocstyle = "^6.1.1"
-pylint = "^2.14.1"
-pytest = "^6.2.5"
-pyupgrade = "^2.34.0"
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
 recommonmark = "^0.7.1"
-safety = "^1.10.3"
 sphinx = "^5.3.0"
 sphinxemoji = "^0.2.0"
 sphinxext-opengraph = "^0.4.2"
@@ -87,17 +78,28 @@ sphinx-gitstamp = "^0.3.2"
 sphinx-markdown-tables = "^0.0.17"
 sphinx-rtd-theme = "^1.0.0"
 
+[tool.poetry.group.lint]
+optional = true
+
+[tool.poetry.group.lint.dependencies]
+bandit = "^1.7.4"
+safety = "^1.10.3"
+black = "^22.6.0"
+darglint = "^1.8.1"
+flake8 = "^4.0.1"
+isort = {extras = ["colors"], version = "^5.10.1"}
+pre-commit = "^2.19.0"
+pylint = "^2.14.1"
+pyupgrade = "^2.34.0"
+pytest = "^6.2.5"
+
 [tool.poetry.extras]
 scikit-learn = ["scikit-learn"]
 datasets = ["datasets"]
-all = [
-  "scikit-learn",
-  "datasets",
-]
 
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
-torch-cpu = "python -m pip install torch==1.12.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
+torch-cpu = "python -m pip install torch==1.13.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
 torch-cuda11 = "python -m pip install torch --extra-index-url https://download.pytorch.org/whl/cu116"
 
 [tool.black]
