--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,6 @@ appnope==0.1.3 ; python_version >= "3.8" and python_version < "3.12" and platfor
 astroid==2.12.12 ; python_version >= "3.8" and python_version < "3.12"
 asttokens==2.1.0 ; python_version >= "3.8" and python_version < "3.12"
 async-timeout==4.0.2 ; python_version >= "3.8" and python_version < "3.12"
-atomicwrites==1.4.1 ; python_version >= "3.8" and python_version < "3.12" and sys_platform == "win32"
 attrs==22.1.0 ; python_version >= "3.8" and python_version < "3.12"
 babel==2.11.0 ; python_version >= "3.8" and python_version < "3.12"
 backcall==0.2.0 ; python_version >= "3.8" and python_version < "3.12"
@@ -30,6 +29,7 @@ distlib==0.3.6 ; python_version >= "3.8" and python_version < "3.12"
 docutils==0.17.1 ; python_version >= "3.8" and python_version < "3.12"
 dparse==0.6.2 ; python_version >= "3.8" and python_version < "3.12"
 entrypoints==0.4 ; python_version >= "3.8" and python_version < "3.12"
+exceptiongroup==1.0.0 ; python_version >= "3.8" and python_version < "3.11"
 executing==1.2.0 ; python_version >= "3.8" and python_version < "3.12"
 filelock==3.8.0 ; python_version >= "3.8" and python_version < "3.12"
 flake8==5.0.4 ; python_version >= "3.8" and python_version < "3.12"
@@ -91,7 +91,7 @@ protobuf==3.20.2 ; python_version >= "3.8" and python_version < "3.12"
 psutil==5.9.3 ; python_version >= "3.8" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_version >= "3.8" and python_version < "3.12" and sys_platform != "win32"
 pure-eval==0.2.2 ; python_version >= "3.8" and python_version < "3.12"
-py==1.11.0 ; python_version >= "3.8" and python_version < "3.12"
+py==1.11.0 ; python_version >= "3.8" and python_version < "3.12" and implementation_name == "pypy"
 pyarrow==10.0.0 ; python_version >= "3.8" and python_version < "3.12"
 pycodestyle==2.9.1 ; python_version >= "3.8" and python_version < "3.12"
 pycparser==2.21 ; python_version >= "3.8" and python_version < "3.12" and implementation_name == "pypy"
@@ -99,7 +99,7 @@ pyflakes==2.5.0 ; python_version >= "3.8" and python_version < "3.12"
 pygments==2.13.0 ; python_version >= "3.8" and python_version < "3.12"
 pylint==2.15.5 ; python_version >= "3.8" and python_version < "3.12"
 pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.12"
-pytest==6.2.5 ; python_version >= "3.8" and python_version < "3.12"
+pytest==7.2.0 ; python_version >= "3.8" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.12"
 pytz==2022.6 ; python_version >= "3.8" and python_version < "3.12"
 pyupgrade==2.38.4 ; python_version >= "3.8" and python_version < "3.12"
@@ -111,7 +111,9 @@ regex==2022.10.31 ; python_version >= "3.8" and python_version < "3.12"
 requests==2.28.1 ; python_version >= "3.8" and python_version < "3.12"
 responses==0.18.0 ; python_version >= "3.8" and python_version < "3.12"
 rich==10.16.2 ; python_version >= "3.8" and python_version < "3.12"
-safety==1.10.3 ; python_version >= "3.8" and python_version < "3.12"
+ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.11" and python_version >= "3.8"
+ruamel-yaml==0.17.21 ; python_version >= "3.8" and python_version < "3.12"
+safety==2.3.1 ; python_version >= "3.8" and python_version < "3.12"
 scikit-learn==1.1.3 ; python_version >= "3.8" and python_version < "3.12"
 scipy==1.9.3 ; python_version >= "3.8" and python_version < "3.12"
 sentencepiece==0.1.97 ; python_version >= "3.8" and python_version < "3.12"
