--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ classifiers = [  #! Update me
 "inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.8.1,<3.12"
 
 rich = "^10.13.0"
 transformers =  { version = "^4.20.1", extras = ["sentencepiece", "tokenizers", "torch"] }
@@ -86,12 +86,13 @@ bandit = "^1.7.4"
 safety = "^2.2.0"
 black = "^22.6.0"
 darglint = "^1.8.1"
-flake8 = "^5.0.4"
+flake8 = "^6.0.0"
 isort = {extras = ["colors"], version = "^5.10.1"}
 pre-commit = "^2.19.0"
-pylint = "^2.14.1"
+pylint = "^2.15.7"
 pyupgrade = "^2.34.0"
 pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.extras]
 sklearn = ["scikit-learn", "joblib"]
