--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ classifiers = [  #! Update me
 "inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.8.1,<3.12"
 
 rich = "^10.13.0"
 transformers =  { version = "^4.20.1", extras = ["sentencepiece", "tokenizers", "torch"] }
@@ -57,11 +57,11 @@ torch = "^1.13.0"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
-ipykernel = "^6.15.0"
-ipywidgets = "^8.0.0rc2"
 poethepoet = "^0.13.1"
-joblib = "^1.2.0"
 
+ipykernel = { version = "^6.15.0", optional = true }
+ipywidgets = { version = "^8.0.0rc2", optional = true }
+joblib = { version = "^1.2.0", optional = true }
 scikit-learn = { version = "^1.1.1", optional = true }
 datasets = { version = "^2.3.2", optional = true, extras = ["torch"] }
 
@@ -83,19 +83,21 @@ optional = true
 
 [tool.poetry.group.lint.dependencies]
 bandit = "^1.7.4"
-safety = "^1.10.3"
+safety = "^2.2.0"
 black = "^22.6.0"
 darglint = "^1.8.1"
-flake8 = "^4.0.1"
+flake8 = "^6.0.0"
 isort = {extras = ["colors"], version = "^5.10.1"}
 pre-commit = "^2.19.0"
-pylint = "^2.14.1"
+pylint = "^2.15.7"
 pyupgrade = "^2.34.0"
-pytest = "^6.2.5"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.extras]
-scikit-learn = ["scikit-learn"]
+sklearn = ["scikit-learn", "joblib"]
 datasets = ["datasets"]
+notebook = ["ipykernel", "ipywidgets"]
 
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
@@ -179,7 +181,7 @@ doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAI
 
 markers = [
   "slow",
-  "require_gpu"
+  "require_cuda_gpu"
 ]
 
 # Extra options:
