--- a/setup.cfg
+++ b/setup.cfg
@@ -34,16 +34,12 @@ exclude =
     venv,
     .venv
 select = E,W,F
-doctests = True
+doctests = False
 verbose = 2
 format = pylint
 max-line-length = 119
 per-file-ignores = __init__.py:F401
-ignore=
-    E731, # do not assign lambda, use a def
-    E741, # ambiguous variable name
-    F821, # undefined name for TensorType dimensions
-    W503, # line break occurred before a binary operator
+ignore= E203, E731, E741, F821, W503, C901
 
 [metadata]
 license_file = LICENSE
