--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "inseq"
-version = "0.3.0"
-description = "Interpretability for Sequence-to-sequence models 🔍"
+version = "0.3.1"
+description = "Interpretability for Sequence Generation Models 🔍"
 readme = "README.md"
 authors = ["The Inseq Team"]
 maintainers = ["gsarti <gabriele.sarti996@gmail.com>"]
