--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "inseq"
-version = "0.3.0"
-description = "Interpretability for Sequence-to-sequence models 🔍"
+version = "0.3.1"
+description = "Interpretability for Sequence Generation Models 🔍"
 readme = "README.md"
 authors = ["The Inseq Team"]
 maintainers = ["gsarti <gabriele.sarti996@gmail.com>"]
@@ -47,7 +47,7 @@ classifiers = [  #! Update me
 python = ">=3.8.1,<3.12"
 
 rich = "^10.13.0"
-transformers =  { version = "^4.20.1", extras = ["sentencepiece", "tokenizers", "torch"] }
+transformers =  { version = "^4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
 protobuf = "^3.20.2"
 captum = "^0.5.0"
 numpy = "^1.22.4"
