--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,7 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.10"
 ]
 
 [tool.poetry.scripts]
@@ -44,7 +43,7 @@ classifiers = [  #! Update me
 "inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.12"
+python = ">=3.8.1,<3.11"
 
 rich = "^10.13.0"
 transformers =  { version = "^4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
@@ -53,7 +52,7 @@ captum = "^0.5.0"
 numpy = "^1.22.4"
 torchtyping = "^0.1.4"
 json-tricks = "^3.15.5"
-torch = "^1.13.0"
+torch = "~1.12.1"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
