--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,11 +59,11 @@ matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
 poethepoet = "^0.13.1"
 
-ipykernel = { version = "^6.15.0", optional = true }
-ipywidgets = { version = "^8.0.0rc2", optional = true }
-joblib = { version = "^1.2.0", optional = true }
-scikit-learn = { version = "^1.1.1", optional = true }
-datasets = { version = "^2.3.2", optional = true, extras = ["torch"] }
+ipykernel = { extras = ["notebook"], version = "^6.19.2", optional = true }
+ipywidgets = { extras = ["notebook"], version = "^8.0.0rc2", optional = true }
+joblib = { extras = ["sklearn"], version = "^1.2.0", optional = true }
+scikit-learn = { extras = ["sklearn"], version = "^1.1.1", optional = true }
+datasets = { extras = ["datasets"], version = "^2.3.2", optional = true }
 
 [tool.poetry.group.docs]
 optional = true
