--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,9 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10"
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11"
+
 ]
 
 [tool.poetry.scripts]
@@ -43,7 +45,7 @@ classifiers = [  #! Update me
 "inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.11"
+python = ">=3.8.1,<3.12"
 
 rich = "^10.13.0"
 transformers =  { version = "^4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
@@ -52,7 +54,7 @@ captum = "^0.5.0"
 numpy = "^1.22.4"
 torchtyping = "^0.1.4"
 json-tricks = "^3.15.5"
-torch = "~1.12.1"
+torch = "^1.13.1"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
@@ -100,7 +102,7 @@ notebook = ["ipykernel", "ipywidgets"]
 
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
-torch-cpu = "python -m pip install torch==1.13.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
+torch-cpu = "python -m pip install torch==1.13.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"
 torch-cuda11 = "python -m pip install torch --extra-index-url https://download.pytorch.org/whl/cu116"
 
 [tool.black]
