--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,7 @@ appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and 
 astroid==2.12.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 asttokens==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 async-timeout==4.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-attrs==22.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+attrs==22.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 babel==2.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 bandit==1.7.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -20,46 +20,46 @@ colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 comm==0.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 contourpy==1.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-coverage[toml]==6.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+coverage[toml]==7.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-datasets[datasets]==2.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+datasets[datasets]==2.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 debugpy==1.6.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+dill==0.3.6 ; python_version < "3.12" and python_full_version >= "3.8.1"
 distlib==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 docutils==0.17.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dparse==0.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 entrypoints==0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-exceptiongroup==1.0.4 ; python_full_version >= "3.8.1" and python_version < "3.11"
+exceptiongroup==1.1.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-filelock==3.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+filelock==3.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 flake8==6.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fonttools==4.38.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 frozenlist==1.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fsspec[http]==2022.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
-gitpython==3.1.29 ; python_full_version >= "3.8.1" and python_version < "3.12"
+gitpython==3.1.30 ; python_full_version >= "3.8.1" and python_version < "3.12"
 huggingface-hub==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-identify==2.5.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
+identify==2.5.11 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-importlib-metadata==5.1.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+importlib-metadata==6.0.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==1.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel==6.19.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel[notebook]==6.19.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel==6.19.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel[notebook]==6.19.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipywidgets[notebook]==8.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-isort==5.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-isort[colors]==5.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipywidgets[notebook]==8.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+isort==5.11.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+isort[colors]==5.11.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 json-tricks==3.16.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-client==7.4.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyter-core==5.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyterlab-widgets==3.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyter-core==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyterlab-widgets==3.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 lazy-object-proxy==1.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markdown==3.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -67,12 +67,12 @@ markupsafe==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mccabe==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-multidict==6.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+multidict==6.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 multiprocess==0.70.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mypy-extensions==0.4.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nest-asyncio==1.5.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-numpy==1.23.5 ; python_version < "3.12" and python_full_version >= "3.8.1"
+numpy==1.24.1 ; python_version < "3.12" and python_full_version >= "3.8.1"
 nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
@@ -85,11 +85,11 @@ pathspec==0.10.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pbr==5.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pillow==9.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-platformdirs==2.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pillow==9.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+platformdirs==2.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pluggy==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pre-commit==2.20.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pre-commit==2.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 prompt-toolkit==3.0.36 ; python_full_version >= "3.8.1" and python_version < "3.12"
 protobuf==3.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 psutil==5.9.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -100,13 +100,13 @@ pyarrow==10.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycodestyle==2.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
 pyflakes==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pygments==2.13.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pylint==2.15.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pygments==2.14.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pylint==2.15.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest-cov==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest==7.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytz==2022.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytz==2022.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyupgrade==2.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -122,7 +122,7 @@ safety==2.3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.9.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.97 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools-scm==7.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools-scm==7.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 setuptools==65.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 smmap==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -152,7 +152,7 @@ torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.64.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-traitlets==5.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+traitlets==5.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.25.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -160,8 +160,8 @@ urllib3==1.26.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 virtualenv==20.17.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
-widgetsnbextension==4.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+widgetsnbextension==4.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wrapt==1.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-xxhash==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+xxhash==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 zipp==3.11.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
