--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,17 +83,13 @@ sphinx-rtd-theme = "^1.0.0"
 optional = true
 
 [tool.poetry.group.lint.dependencies]
-bandit = "^1.7.4"
 safety = "^2.2.0"
 black = "^22.6.0"
 darglint = "^1.8.1"
-flake8 = "^6.0.0"
-isort = {extras = ["colors"], version = "^5.10.1"}
 pre-commit = "^2.19.0"
-pylint = "^2.15.7"
-pyupgrade = "^2.34.0"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
+ruff  = "^0.0.219"
 
 [tool.poetry.extras]
 sklearn = ["scikit-learn", "joblib"]
@@ -108,6 +104,7 @@ torch-cuda11 = "python -m pip install torch --extra-index-url https://download.p
 [tool.black]
 # https://github.com/psf/black
 target-version = ["py38"]
+preview = true
 line-length = 119
 color = true
 
@@ -127,49 +124,11 @@ exclude = '''
 )/
 '''
 
-[tool.isort]
-# https://github.com/timothycrosley/isort/
-py_version = 38
-line_length = 119
-
-known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
-sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
-include_trailing_comma = true
-profile = "black"
-multi_line_output = 3
-indent = 4
-color_output = true
-lines_after_imports = 2
-use_parentheses = true
-known_first_party = "inseq"
-force_grid_wrap = 0
-ensure_newline_before_comments = true
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
 python_version = 3.8
-pretty = true
-show_traceback = true
-color_output = true
-
-allow_redefinition = false
-check_untyped_defs = true
-disallow_any_generics = true
-disallow_incomplete_defs = true
-ignore_missing_imports = true
-implicit_reexport = false
-no_implicit_optional = true
-show_column_numbers = true
-show_error_codes = true
-show_error_context = true
-strict_equality = true
-strict_optional = true
-warn_no_return = true
-warn_redundant_casts = true
-warn_return_any = true
-warn_unreachable = true
-warn_unused_configs = true
-warn_unused_ignores = true
+strict = true
 
 
 [tool.pytest.ini_options]
@@ -194,3 +153,80 @@ addopts = [
   "--disable-pytest-warnings",
   "--color=yes"
 ]
+
+[tool.coverage.run]
+parallel = true
+source = [
+    "inseq",
+]
+omit = [
+    "*/__main__.py",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no-cover",
+    "pass",
+    "raise",
+    "except",
+    "raise NotImplementedError",
+]
+
+[tool.bandit]
+targets = ["inseq"]
+skips = ["B301"]
+
+[tool.ruff]
+target-version = "py38"
+exclude = [
+    ".git",
+    ".vscode",
+    ".github",
+    "__pycache__",
+    "docs/source/conf.py",
+    "old",
+    "build",
+    "htmlcov",
+    "dev_examples",
+    "dist",
+    ".tox",
+    "temp",
+    "*.egg",
+    "venv",
+    ".venv",
+]
+fix = true
+ignore = [
+    "C901",
+    "E731",
+    "E741",
+    "F821",
+    "C901",
+]
+line-length = 119
+select = [
+    "E", # pycodestyle errors
+    "F", # pyflakes
+    "W", # pycodestyle warnings
+    "C", # flake8-comprehensions
+    "B", # flake8-bugbear
+    "Q", # flake8-quotes
+    "I", # isort
+    "UP", # flake8-pyupgrade
+    "PLC", # flake8-pylint
+    "PLE", # flake8-pylint
+    "PLR", # flake8-pylint
+    "PLW", # flake8-pylint
+]
+src = ["inseq", "tests"]
+
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.isort]
+known-first-party = ["inseq"]
+order-by-type = true
+
+[tool.ruff.pyupgrade]
+keep-runtime-typing = true
