--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ ipywidgets = { extras = ["notebook"], version = "^8.0.0rc2", optional = true }
 joblib = { extras = ["sklearn"], version = "^1.2.0", optional = true }
 scikit-learn = { extras = ["sklearn"], version = "^1.1.1", optional = true }
 datasets = { extras = ["datasets"], version = "^2.3.2", optional = true }
+gitpython = "^3.1.30"
 
 [tool.poetry.group.docs]
 optional = true
